--- a/bgo-modal-06-2017/modal.html
+++ b/bgo-modal-06-2017/modal.html
@@ -95,16 +95,16 @@ count: false
 
 ---
 class: center, middle
-count: false
 # Contexte
 
 ---
 background-image: url(fig/angio.jpg)
+
 ---
 # ICAN: IntraCranial ANeurysms
 
 ## Un projet de recherche clinique et pré-clinique
-Développer des approches diagnostiques et prédictives de la formation et de la rupture des anévrismes intracrâniens :
+Développer des approches diagnostiques et prédictives de la formation et de la rupture des anévrismes intracrâniens :
 - comprendre les .red[mécanismes physio-pathologiques]
 - comprendre l'.red[impact de la génétique]  (formes familiales)
 
@@ -116,8 +116,10 @@ Développer des approches diagnostiques et prédictives de la formation et de 
 - Séquencages d'exomes
 
 ---
+background-image: url(fig/map.png)
+
+---
 class: center, middle
-count: false
 # Challenges
 
 ---
@@ -171,7 +173,7 @@ count: false
 
 ## .green[Résultats attendus]
 1. .red[état des lieux] des acteurs et infrastructures du Grand Ouest,
-2. .red[démonstrateurs] technologiques pour la gestion, l’analyse et la réutilisation de .red[données multi-infrastructures] (imagerie  in-vivo ,  in-vitro , génomique), dans le contexte des anévrismes intracrâniens.
+2. .red[démonstrateurs] technologiques pour la gestion, l’analyse et la réutilisation de .red[données multi-infrastructures] (imagerie  in-vivo ,  in-vitro , génomique), dans le contexte des anévrismes intracrâniens.
 
 ---
 # Platformes spécialisées du Grand Ouest
@@ -186,10 +188,10 @@ Bioimagerie, Microscopie, analyse d'images à l'échelle "cellule" (Nantes)
 
 .split-right[
 ### .red[GenOuest]
-Infrastructure de calcul et stockage, développement logiciel, virtualisation, environnements virtuels de recherche, portails scientifiques (Rennes)
+Infrastructure de calcul et stockage, développement logiciel, virtualisation, environnements virtuels de recherche, portails scientifiques (Rennes)
 
 ### .red[BiRD]
-Analyse de données génomiques et développement de pipelines bioinformatiques, infrastructures de calcul et stockage, cloud (Nantes)
+Analyse de données génomiques et développement de pipelines bioinformatiques, infrastructures de calcul et stockage, cloud (Nantes)
 ]
 ---
 # Infrastructures nationales thématiques
