--- a/bgo-modal-06-2017/modal.html
+++ b/bgo-modal-06-2017/modal.html
@@ -15,7 +15,7 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      li { padding-bottom: 0.5em; }
+      li { padding-bottom: 0.7em; }
 
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
@@ -91,6 +91,8 @@ count: false
 <br>
 ### Richard Redon, Christian Barillot, Alban Gaignard
 <br>
+<br>
+![:scale 90%](fig/logos.png)
 
 
 ---
@@ -180,18 +182,21 @@ count: false
 
 .split-left[
 ### .green[NeurInfo]
-Neuroimagerie, IRM recherche, SHANOIR, analyse d'images à l'échelle "organe" (Rennes)
+Neuroimagerie, IRM recherche, SHANOIR &rarr; "organes" (Rennes)
 
 ### .blue[MicroPiCell]
-Bioimagerie, Microscopie, analyse d'images à l'échelle "cellule" (Nantes)
+Bioimagerie, Microscopie, &rarr; "cellule" (Nantes)
+
+### .red[Biogenouest Génomique]
+Séquençage haut débit, génotypage, transcriptomique &rarr; "gènes" (Roscoff, Rennes, Nantes)
 ]
 
 .split-right[
 ### .red[GenOuest]
-Infrastructure de calcul et stockage, développement logiciel, virtualisation, environnements virtuels de recherche, portails scientifiques (Rennes)
+Infrastructure (calcul, stockage), développement logiciel, virtualisation, environnements virtuels de recherche (Rennes)
 
 ### .red[BiRD]
-Analyse de données génomiques et développement de pipelines bioinformatiques, infrastructures de calcul et stockage, cloud (Nantes)
+Analyse de données génomiques, workflows bioinformatiques, infrastructure (calcul, stockage), cloud (Nantes)
 ]
 ---
 # Infrastructures nationales thématiques
@@ -221,30 +226,39 @@ Analyse de données génomiques et développement de pipelines bioinformatiques,
 
 ---
 # Impulser une dynamique inter-régionale
+<br>
 .split-left[
-### .green[Partenaires] déjà identifiés
-- Neuro-Radiologie CHU de Nantes
-- Institut du Thorax
-- LS2N
-- Inria - IRISA
-
 ### .blue[Projets] connexes
 - CeSGO (CPER, BioGenOuest)
 - SyMeTRIC (Région Pays de la Loire)
 - Griote (Région Pays de la Loire)
 - BioDataRing (BioGenOuest)
 ]
-.split-right[
-### Fédérer une large .green[communauté]
-- Recherche .red[translationnelle]
-- Phénotypage haut débit en biologie .red[végétale]
-- Métagénomique et données satellitaires en biologie .red[marine]
 
+.split-right[
 ### .blue[Projets] à venir
 - Post-doctorat ICAN (biomarqueurs d'imagerie vasculaire)
 - Post-doctorat Inria-IRISA
 - Thèse Inria-Inserm (plan France Médecine Génomique 2025)
 ]
+
+---
+# Impulser une dynamique inter-régionale
+<br>
+.split-left[
+### .green[Partenaires] déjà identifiés
+- Neuro-Radiologie **CHU de Nantes**
+- **Institut du Thorax** (équ. 1: génétique cardiovasculaire, équ. 3: signalisation en physiopathologie vasculaire et pulmonaire)
+- **LS2N** (COMBI, GDD)
+- **Inria - IRISA** (VisAGeS, SERPICO, DyLiss, GenScale)
+]
+.split-right[
+### Fédérer une .green[large communauté]
+- Recherche .red[translationnelle]
+- Phénotypage haut débit en .red[biologie végétale]
+- Métagénomique et données satellitaires en .red[biologie marine]
+]
+
 
 ---
 class: middle, center
